--- a/Ecommerce2doparial/appsettings.json
+++ b/Ecommerce2doparial/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=tcp:2doparcial.database.windows.net,1433;Initial Catalog=2doparcial;Persist Security Info=False;User ID=javieradm;Password=Passw0rd;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  },
+  "Jwt": {
+    "Key": "supersecretkey123456789abcd12345678"
+  }
 }
